exports[`test renders complete message 1`] = `
<div>
  <Connect(SplitContainerWithoutData)
    classes={
      Array [
        "background--light-primary",
      ]
    }
    nav={true}>
    <Meta
      title="Giving Schedule" />
    <Right
      background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/all/heroes/newspring/campuses/Florence.1.2x1_1700_850_90_c1.jpg"
      mobile={false} />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}>
    <div
      className="soft-double-sides@lap-and-up soft-double-ends@lap-and-up soft background--light-primary">
      <div
        className="text-left soft-double-top hard-left@lap-and-up soft-half-bottom soft@anchored">
        <div
          className="soft-double-ends">
          <div
            className="text-center">
            <Currency
              amount="2.00"
              baseHeadingSize="1"
              className="flush-bottom soft-half-bottom text-center display-inline-block" />
            <h4
              className="text-dark-primary flush-bottom">
              Test
            </h4>
            <h4
              className="text-dark-primary soft-half-top">
              1111
               
                
              <AccountType
                height="20px"
                type="Bank"
                width="30px" />
            </h4>
          </div>
        </div>
        <hr
          className="hard push-bottom outlined--light outlined--bottom"
          style={
            Object {
              "borderColor": "#ddd",
            }
          } />
        <div
          className="soft-top">
          <div
            className="floating one-whole display-inline-block">
            <div
              className="floating__item float-left">
              <h4
                className="hard text-dark-primary">
                test account
              </h4>
            </div>
            <div
              className="floating__item float-right">
              <Currency
                amount={2}
                baseHeadingSize="4"
                className="text-right text-dark-secondary" />
            </div>
          </div>
          <p
            className="flush soft-top">
            <span
              className="h7 text-dark-tertiary push-half-right"
              style={
                Object {
                  "verticalAlign": "middle",
                }
              }>
              Start Date:
            </span>
            <em
              className="text-dark-primary">
              Dec 12, 2012
            </em>
          </p>
          <p
            className="flush">
            <span
              className="h7 text-dark-tertiary push-half-right"
              style={
                Object {
                  "verticalAlign": "middle",
                }
              }>
              Latest Contribution:
            </span>
            <em
              className="text-dark-primary">
              Dec 12, 2013
            </em>
          </p>
          <div
            className="one-whole soft-double-top text-center">
            <SmallButton
              disabled={true}
              text="Schedule Completed" />
          </div>
          <div>
            <p
              className="soft-double-top soft-half-sides text-left@handheld text-center">
              <small>
                <em>
                  To change details about a schedule, please cancel the current one and create a new schedule with the desired information. We are sorry for any inconvenience this may cause and are working to provide the ability to edit contribution schedules in the future.
                </em>
              </small>
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="soft-half soft-sides@portable soft-double-sides@anchored">
      <TransactionList
        transactions={
          Array [
            Object {
              "date": "2013-12-12",
              "details": Array [
                Object {
                  "account": "test detail account",
                  "amount": 2,
                },
              ],
              "person": Object {},
            },
            Object {
              "date": "2013-12-12",
              "details": Array [
                Object {
                  "account": "test detail account",
                  "amount": 2,
                },
              ],
              "person": Object {},
            },
          ]
        } />
      <hr
        className="push-double-top flush-bottom" />
      <h4
        className="soft soft-double-ends text-center@lap-and-up flush-bottom">
        Recent Articles About Giving
      </h4>
      <div
        className="grid">
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom">
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }>
            <h4
              className="push-half-top@portable push-top@anchored">
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test summary",
                  }
                } />
            </p>
          </Card>
        </div>
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom">
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }>
            <h4
              className="push-half-top@portable push-top@anchored">
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test summary",
                  }
                } />
            </p>
          </Card>
        </div>
      </div>
      ;
    </div>
  </Left>
</div>
`;

exports[`test renders loading if no entries 1`] = `
<div>
  <Connect(SplitContainerWithoutData)
    classes={
      Array [
        "background--light-primary",
      ]
    }
    nav={true}>
    <Meta
      title="Giving Schedule" />
    <Right
      background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/all/heroes/newspring/campuses/Florence.1.2x1_1700_850_90_c1.jpg"
      mobile={false} />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}>
    <div
      className="soft-double-sides@lap-and-up soft-double-ends@lap-and-up soft background--light-primary">
      <div
        className="text-left soft-double-top hard-left@lap-and-up soft-half-bottom soft@anchored">
        <div
          className="soft-double-ends">
          <div
            className="text-center">
            <Currency
              amount="2.00"
              baseHeadingSize="1"
              className="flush-bottom soft-half-bottom text-center display-inline-block" />
            <h4
              className="text-dark-primary flush-bottom">
              Test
            </h4>
            <h4
              className="text-dark-primary soft-half-top">
              1111
               
                
              <AccountType
                height="20px"
                type="Bank"
                width="30px" />
            </h4>
          </div>
        </div>
        <hr
          className="hard push-bottom outlined--light outlined--bottom"
          style={
            Object {
              "borderColor": "#ddd",
            }
          } />
        <div
          className="soft-top">
          <div
            className="floating one-whole display-inline-block">
            <div
              className="floating__item float-left">
              <h4
                className="hard text-dark-primary">
                test account
              </h4>
            </div>
            <div
              className="floating__item float-right">
              <Currency
                amount={2}
                baseHeadingSize="4"
                className="text-right text-dark-secondary" />
            </div>
          </div>
          <p
            className="flush soft-top">
            <span
              className="h7 text-dark-tertiary push-half-right"
              style={
                Object {
                  "verticalAlign": "middle",
                }
              }>
              Start Date:
            </span>
            <em
              className="text-dark-primary">
              Dec 12, 2012
            </em>
          </p>
          <p
            className="flush">
            <span
              className="h7 text-dark-tertiary push-half-right"
              style={
                Object {
                  "verticalAlign": "middle",
                }
              }>
              Latest Contribution:
            </span>
            <em
              className="text-dark-primary">
              Dec 12, 2013
            </em>
          </p>
          <div
            className="one-whole soft-double-top text-center">
            <SmallButton
              className="text-alert"
              onClick={[Function]}
              text="Stop Contribution" />
          </div>
          <div>
            <p
              className="soft-double-top soft-half-sides text-left@handheld text-center">
              <small>
                <em>
                  To change details about a schedule, please cancel the current one and create a new schedule with the desired information. We are sorry for any inconvenience this may cause and are working to provide the ability to edit contribution schedules in the future.
                </em>
              </small>
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="soft-half soft-sides@portable soft-double-sides@anchored">
      <TransactionList
        transactions={
          Array [
            Object {
              "date": "2013-12-12",
              "details": Array [
                Object {
                  "account": "test detail account",
                  "amount": 2,
                },
              ],
              "person": Object {},
            },
            Object {
              "date": "2013-12-12",
              "details": Array [
                Object {
                  "account": "test detail account",
                  "amount": 2,
                },
              ],
              "person": Object {},
            },
          ]
        } />
      <hr
        className="push-double-top flush-bottom" />
      <h4
        className="soft soft-double-ends text-center@lap-and-up flush-bottom">
        Recent Articles About Giving
      </h4>
      <div
        className="one-whole soft text-center">
        <Spinner />
      </div>
      ;
    </div>
  </Left>
</div>
`;

exports[`test renders loading if no schedule 1`] = `
<div>
  <Connect(SplitContainerWithoutData)
    classes={
      Array [
        "background--light-primary",
      ]
    }
    nav={true}>
    <Meta
      title="Giving Schedule" />
    <Right
      background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/all/heroes/newspring/campuses/Florence.1.2x1_1700_850_90_c1.jpg"
      mobile={false} />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}>
    <div
      className="soft-double-sides@lap-and-up soft-double-ends@lap-and-up soft background--light-primary">
      <div
        className="text-left soft-double-top hard-left@lap-and-up soft-half-bottom soft@anchored">
        <div
          className="soft-double-ends">
          <div
            className="text-center soft">
            <Spinner
              styles={
                Object {
                  "height": "40px",
                  "width": "40px",
                }
              } />
          </div>
        </div>
        <hr
          className="hard push-bottom outlined--light outlined--bottom"
          style={
            Object {
              "borderColor": "#ddd",
            }
          } />
      </div>
    </div>
    <div
      className="soft-half soft-sides@portable soft-double-sides@anchored">
      <hr
        className="push-double-top flush-bottom" />
      <h4
        className="soft soft-double-ends text-center@lap-and-up flush-bottom">
        Recent Articles About Giving
      </h4>
      <div
        className="grid">
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom">
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }>
            <h4
              className="push-half-top@portable push-top@anchored">
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test summary",
                  }
                } />
            </p>
          </Card>
        </div>
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom">
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }>
            <h4
              className="push-half-top@portable push-top@anchored">
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test summary",
                  }
                } />
            </p>
          </Card>
        </div>
      </div>
      ;
    </div>
  </Left>
</div>
`;

exports[`test renders loading if not ready 1`] = `
<div>
  <Connect(SplitContainerWithoutData)
    classes={
      Array [
        "background--light-primary",
      ]
    }
    nav={true}>
    <Meta
      title="Giving Schedule" />
    <Right
      background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/all/heroes/newspring/campuses/Florence.1.2x1_1700_850_90_c1.jpg"
      mobile={false} />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}>
    <div
      className="soft-double-sides@lap-and-up soft-double-ends@lap-and-up soft background--light-primary">
      <div
        className="text-left soft-double-top hard-left@lap-and-up soft-half-bottom soft@anchored">
        <div
          className="soft-double-ends">
          <div
            className="text-center soft">
            <Spinner
              styles={
                Object {
                  "height": "40px",
                  "width": "40px",
                }
              } />
          </div>
          <div
            className="text-center">
            <Currency
              amount="2.00"
              baseHeadingSize="1"
              className="flush-bottom soft-half-bottom text-center display-inline-block" />
            <h4
              className="text-dark-primary flush-bottom">
              Test
            </h4>
            <h4
              className="text-dark-primary soft-half-top">
              1111
               
                
              <AccountType
                height="20px"
                type="Bank"
                width="30px" />
            </h4>
          </div>
        </div>
        <hr
          className="hard push-bottom outlined--light outlined--bottom"
          style={
            Object {
              "borderColor": "#ddd",
            }
          } />
        <div
          className="soft-top">
          <div
            className="floating one-whole display-inline-block">
            <div
              className="floating__item float-left">
              <h4
                className="hard text-dark-primary">
                test account
              </h4>
            </div>
            <div
              className="floating__item float-right">
              <Currency
                amount={2}
                baseHeadingSize="4"
                className="text-right text-dark-secondary" />
            </div>
          </div>
          <p
            className="flush soft-top">
            <span
              className="h7 text-dark-tertiary push-half-right"
              style={
                Object {
                  "verticalAlign": "middle",
                }
              }>
              Start Date:
            </span>
            <em
              className="text-dark-primary">
              Dec 12, 2012
            </em>
          </p>
          <p
            className="flush">
            <span
              className="h7 text-dark-tertiary push-half-right"
              style={
                Object {
                  "verticalAlign": "middle",
                }
              }>
              Latest Contribution:
            </span>
            <em
              className="text-dark-primary">
              Dec 12, 2013
            </em>
          </p>
          <div
            className="one-whole soft-double-top text-center">
            <SmallButton
              className="text-alert"
              onClick={[Function]}
              text="Stop Contribution" />
          </div>
          <div>
            <p
              className="soft-double-top soft-half-sides text-left@handheld text-center">
              <small>
                <em>
                  To change details about a schedule, please cancel the current one and create a new schedule with the desired information. We are sorry for any inconvenience this may cause and are working to provide the ability to edit contribution schedules in the future.
                </em>
              </small>
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="soft-half soft-sides@portable soft-double-sides@anchored">
      <TransactionList
        transactions={
          Array [
            Object {
              "date": "2013-12-12",
              "details": Array [
                Object {
                  "account": "test detail account",
                  "amount": 2,
                },
              ],
              "person": Object {},
            },
            Object {
              "date": "2013-12-12",
              "details": Array [
                Object {
                  "account": "test detail account",
                  "amount": 2,
                },
              ],
              "person": Object {},
            },
          ]
        } />
      <hr
        className="push-double-top flush-bottom" />
      <h4
        className="soft soft-double-ends text-center@lap-and-up flush-bottom">
        Recent Articles About Giving
      </h4>
      <div
        className="grid">
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom">
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }>
            <h4
              className="push-half-top@portable push-top@anchored">
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test summary",
                  }
                } />
            </p>
          </Card>
        </div>
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom">
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }>
            <h4
              className="push-half-top@portable push-top@anchored">
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test summary",
                  }
                } />
            </p>
          </Card>
        </div>
      </div>
      ;
    </div>
  </Left>
</div>
`;

exports[`test renders no contributions message 1`] = `
<div>
  <Connect(SplitContainerWithoutData)
    classes={
      Array [
        "background--light-primary",
      ]
    }
    nav={true}>
    <Meta
      title="Giving Schedule" />
    <Right
      background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/all/heroes/newspring/campuses/Florence.1.2x1_1700_850_90_c1.jpg"
      mobile={false} />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}>
    <div
      className="soft-double-sides@lap-and-up soft-double-ends@lap-and-up soft background--light-primary">
      <div
        className="text-left soft-double-top hard-left@lap-and-up soft-half-bottom soft@anchored">
        <div
          className="soft-double-ends">
          <div
            className="text-center">
            <Currency
              amount="2.00"
              baseHeadingSize="1"
              className="flush-bottom soft-half-bottom text-center display-inline-block" />
            <h4
              className="text-dark-primary flush-bottom">
              Test
            </h4>
            <h4
              className="text-dark-primary soft-half-top">
              1111
               
                
              <AccountType
                height="20px"
                type="Bank"
                width="30px" />
            </h4>
          </div>
        </div>
        <hr
          className="hard push-bottom outlined--light outlined--bottom"
          style={
            Object {
              "borderColor": "#ddd",
            }
          } />
        <div
          className="soft-top">
          <div
            className="floating one-whole display-inline-block">
            <div
              className="floating__item float-left">
              <h4
                className="hard text-dark-primary">
                test account
              </h4>
            </div>
            <div
              className="floating__item float-right">
              <Currency
                amount={2}
                baseHeadingSize="4"
                className="text-right text-dark-secondary" />
            </div>
          </div>
          <p
            className="flush soft-top">
            <span
              className="h7 text-dark-tertiary push-half-right"
              style={
                Object {
                  "verticalAlign": "middle",
                }
              }>
              Start Date:
            </span>
            <em
              className="text-dark-primary">
              Dec 12, 2012
            </em>
          </p>
          <div
            className="one-whole soft-double-top text-center">
            <SmallButton
              className="text-alert"
              onClick={[Function]}
              text="Stop Contribution" />
          </div>
          <div>
            <p
              className="soft-double-top soft-half-sides text-left@handheld text-center">
              <small>
                <em>
                  To change details about a schedule, please cancel the current one and create a new schedule with the desired information. We are sorry for any inconvenience this may cause and are working to provide the ability to edit contribution schedules in the future.
                </em>
              </small>
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="soft-half soft-sides@portable soft-double-sides@anchored">
      <div
        className="text-left soft-double-top soft-half-sides">
        <p>
          We didn\'t find any contributions associated with this schedule.
        </p>
        <p>
          <em>
            If you have any questions, please call our Finance Team at 864-965-9990 or 
             
            <a
              href="//rock.newspring.cc/workflows/152?Topic=Stewardship"
              rel="noopener noreferrer"
              target="_blank">
              contact us
            </a>
             
             and someone will be happy to assist you.
          </em>
        </p>
      </div>
      <TransactionList
        transactions={Array []} />
      <hr
        className="push-double-top flush-bottom" />
      <h4
        className="soft soft-double-ends text-center@lap-and-up flush-bottom">
        Recent Articles About Giving
      </h4>
      <div
        className="grid">
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom">
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }>
            <h4
              className="push-half-top@portable push-top@anchored">
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test summary",
                  }
                } />
            </p>
          </Card>
        </div>
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom">
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }>
            <h4
              className="push-half-top@portable push-top@anchored">
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test summary",
                  }
                } />
            </p>
          </Card>
        </div>
      </div>
      ;
    </div>
  </Left>
</div>
`;

exports[`test renders stopped message 1`] = `
<div>
  <Connect(SplitContainerWithoutData)
    classes={
      Array [
        "background--light-primary",
      ]
    }
    nav={true}>
    <Meta
      title="Giving Schedule" />
    <Right
      background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/all/heroes/newspring/campuses/Florence.1.2x1_1700_850_90_c1.jpg"
      mobile={false} />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}>
    <div
      className="soft-double-sides@lap-and-up soft-double-ends@lap-and-up soft background--light-primary">
      <div
        className="text-left soft-double-top hard-left@lap-and-up soft-half-bottom soft@anchored">
        <div
          className="soft-double-ends">
          <div
            className="text-center">
            <Currency
              amount="2.00"
              baseHeadingSize="1"
              className="flush-bottom soft-half-bottom text-center display-inline-block" />
            <h4
              className="text-dark-primary flush-bottom">
              Test
            </h4>
            <h4
              className="text-dark-primary soft-half-top">
              1111
               
                
              <AccountType
                height="20px"
                type="Bank"
                width="30px" />
            </h4>
          </div>
        </div>
        <hr
          className="hard push-bottom outlined--light outlined--bottom"
          style={
            Object {
              "borderColor": "#ddd",
            }
          } />
        <div
          className="soft-top">
          <div
            className="floating one-whole display-inline-block">
            <div
              className="floating__item float-left">
              <h4
                className="hard text-dark-primary">
                test account
              </h4>
            </div>
            <div
              className="floating__item float-right">
              <Currency
                amount={2}
                baseHeadingSize="4"
                className="text-right text-dark-secondary" />
            </div>
          </div>
          <p
            className="flush soft-top">
            <span
              className="h7 text-dark-tertiary push-half-right"
              style={
                Object {
                  "verticalAlign": "middle",
                }
              }>
              Start Date:
            </span>
            <em
              className="text-dark-primary">
              Dec 12, 2012
            </em>
          </p>
          <p
            className="flush">
            <span
              className="h7 text-dark-tertiary push-half-right"
              style={
                Object {
                  "verticalAlign": "middle",
                }
              }>
              Latest Contribution:
            </span>
            <em
              className="text-dark-primary">
              Dec 12, 2013
            </em>
          </p>
          <div
            className="one-whole soft-double-top text-center">
            <SmallButton
              disabled={true}
              text="Contribution Stopped" />
          </div>
          <div>
            <p
              className="soft-double-top soft-half-sides text-left@handheld text-center">
              <small>
                <em>
                  To change details about a schedule, please cancel the current one and create a new schedule with the desired information. We are sorry for any inconvenience this may cause and are working to provide the ability to edit contribution schedules in the future.
                </em>
              </small>
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="soft-half soft-sides@portable soft-double-sides@anchored">
      <TransactionList
        transactions={
          Array [
            Object {
              "date": "2013-12-12",
              "details": Array [
                Object {
                  "account": "test detail account",
                  "amount": 2,
                },
              ],
              "person": Object {},
            },
            Object {
              "date": "2013-12-12",
              "details": Array [
                Object {
                  "account": "test detail account",
                  "amount": 2,
                },
              ],
              "person": Object {},
            },
          ]
        } />
      <hr
        className="push-double-top flush-bottom" />
      <h4
        className="soft soft-double-ends text-center@lap-and-up flush-bottom">
        Recent Articles About Giving
      </h4>
      <div
        className="grid">
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom">
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }>
            <h4
              className="push-half-top@portable push-top@anchored">
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test summary",
                  }
                } />
            </p>
          </Card>
        </div>
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom">
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }>
            <h4
              className="push-half-top@portable push-top@anchored">
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test summary",
                  }
                } />
            </p>
          </Card>
        </div>
      </div>
      ;
    </div>
  </Left>
</div>
`;

exports[`test renders with props 1`] = `
<div>
  <Connect(SplitContainerWithoutData)
    classes={
      Array [
        "background--light-primary",
      ]
    }
    nav={true}>
    <Meta
      title="Giving Schedule" />
    <Right
      background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/all/heroes/newspring/campuses/Florence.1.2x1_1700_850_90_c1.jpg"
      mobile={false} />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}>
    <div
      className="soft-double-sides@lap-and-up soft-double-ends@lap-and-up soft background--light-primary">
      <div
        className="text-left soft-double-top hard-left@lap-and-up soft-half-bottom soft@anchored">
        <div
          className="soft-double-ends">
          <div
            className="text-center">
            <Currency
              amount="2.00"
              baseHeadingSize="1"
              className="flush-bottom soft-half-bottom text-center display-inline-block" />
            <h4
              className="text-dark-primary flush-bottom">
              Test
            </h4>
            <h4
              className="text-dark-primary soft-half-top">
              1111
               
                
              <AccountType
                height="20px"
                type="Bank"
                width="30px" />
            </h4>
          </div>
        </div>
        <hr
          className="hard push-bottom outlined--light outlined--bottom"
          style={
            Object {
              "borderColor": "#ddd",
            }
          } />
        <div
          className="soft-top">
          <div
            className="floating one-whole display-inline-block">
            <div
              className="floating__item float-left">
              <h4
                className="hard text-dark-primary">
                test account
              </h4>
            </div>
            <div
              className="floating__item float-right">
              <Currency
                amount={2}
                baseHeadingSize="4"
                className="text-right text-dark-secondary" />
            </div>
          </div>
          <p
            className="flush soft-top">
            <span
              className="h7 text-dark-tertiary push-half-right"
              style={
                Object {
                  "verticalAlign": "middle",
                }
              }>
              Start Date:
            </span>
            <em
              className="text-dark-primary">
              Dec 12, 2012
            </em>
          </p>
          <p
            className="flush">
            <span
              className="h7 text-dark-tertiary push-half-right"
              style={
                Object {
                  "verticalAlign": "middle",
                }
              }>
              Latest Contribution:
            </span>
            <em
              className="text-dark-primary">
              Dec 12, 2013
            </em>
          </p>
          <div
            className="one-whole soft-double-top text-center">
            <SmallButton
              className="text-alert"
              onClick={[Function]}
              text="Stop Contribution" />
          </div>
          <div>
            <p
              className="soft-double-top soft-half-sides text-left@handheld text-center">
              <small>
                <em>
                  To change details about a schedule, please cancel the current one and create a new schedule with the desired information. We are sorry for any inconvenience this may cause and are working to provide the ability to edit contribution schedules in the future.
                </em>
              </small>
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="soft-half soft-sides@portable soft-double-sides@anchored">
      <TransactionList
        transactions={
          Array [
            Object {
              "date": "2013-12-12",
              "details": Array [
                Object {
                  "account": "test detail account",
                  "amount": 2,
                },
              ],
              "person": Object {},
            },
            Object {
              "date": "2013-12-12",
              "details": Array [
                Object {
                  "account": "test detail account",
                  "amount": 2,
                },
              ],
              "person": Object {},
            },
          ]
        } />
      <hr
        className="push-double-top flush-bottom" />
      <h4
        className="soft soft-double-ends text-center@lap-and-up flush-bottom">
        Recent Articles About Giving
      </h4>
      <div
        className="grid">
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom">
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }>
            <h4
              className="push-half-top@portable push-top@anchored">
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test summary",
                  }
                } />
            </p>
          </Card>
        </div>
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom">
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }>
            <h4
              className="push-half-top@portable push-top@anchored">
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test summary",
                  }
                } />
            </p>
          </Card>
        </div>
      </div>
      ;
    </div>
  </Left>
</div>
`;

exports[`test renders without schedule 1`] = `
<div>
  <Connect(SplitContainerWithoutData)
    classes={
      Array [
        "background--light-primary",
      ]
    }
    nav={true}>
    <Meta
      title="Giving Schedule" />
    <Right
      background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/all/heroes/newspring/campuses/Florence.1.2x1_1700_850_90_c1.jpg"
      mobile={false} />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}>
    <div
      className="soft-double-sides@lap-and-up soft-double-ends@lap-and-up soft background--light-primary">
      <div
        className="text-left soft-double-top hard-left@lap-and-up soft-half-bottom soft@anchored">
        <div
          className="soft-double-ends">
          <div
            className="text-center soft">
            <Spinner
              styles={
                Object {
                  "height": "40px",
                  "width": "40px",
                }
              } />
          </div>
        </div>
        <hr
          className="hard push-bottom outlined--light outlined--bottom"
          style={
            Object {
              "borderColor": "#ddd",
            }
          } />
      </div>
    </div>
    <div
      className="soft-half soft-sides@portable soft-double-sides@anchored">
      <hr
        className="push-double-top flush-bottom" />
      <h4
        className="soft soft-double-ends text-center@lap-and-up flush-bottom">
        Recent Articles About Giving
      </h4>
      <div
        className="grid">
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom">
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }>
            <h4
              className="push-half-top@portable push-top@anchored">
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test summary",
                  }
                } />
            </p>
          </Card>
        </div>
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom">
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }>
            <h4
              className="push-half-top@portable push-top@anchored">
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test summary",
                  }
                } />
            </p>
          </Card>
        </div>
      </div>
      ;
    </div>
  </Left>
</div>
`;

exports[`test renders without schedule payment 1`] = `
<div>
  <Connect(SplitContainerWithoutData)
    classes={
      Array [
        "background--light-primary",
      ]
    }
    nav={true}>
    <Meta
      title="Giving Schedule" />
    <Right
      background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/all/heroes/newspring/campuses/Florence.1.2x1_1700_850_90_c1.jpg"
      mobile={false} />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}>
    <div
      className="soft-double-sides@lap-and-up soft-double-ends@lap-and-up soft background--light-primary">
      <div
        className="text-left soft-double-top hard-left@lap-and-up soft-half-bottom soft@anchored">
        <div
          className="soft-double-ends">
          <div
            className="text-center">
            <Currency
              amount="2.00"
              baseHeadingSize="1"
              className="flush-bottom soft-half-bottom text-center display-inline-block" />
            <h4
              className="text-dark-primary flush-bottom">
              Test
            </h4>
          </div>
        </div>
        <hr
          className="hard push-bottom outlined--light outlined--bottom"
          style={
            Object {
              "borderColor": "#ddd",
            }
          } />
        <div
          className="soft-top">
          <div
            className="floating one-whole display-inline-block">
            <div
              className="floating__item float-left">
              <h4
                className="hard text-dark-primary">
                test account
              </h4>
            </div>
            <div
              className="floating__item float-right">
              <Currency
                amount={2}
                baseHeadingSize="4"
                className="text-right text-dark-secondary" />
            </div>
          </div>
          <p
            className="flush soft-top">
            <span
              className="h7 text-dark-tertiary push-half-right"
              style={
                Object {
                  "verticalAlign": "middle",
                }
              }>
              Start Date:
            </span>
            <em
              className="text-dark-primary">
              Dec 12, 2012
            </em>
          </p>
          <p
            className="flush">
            <span
              className="h7 text-dark-tertiary push-half-right"
              style={
                Object {
                  "verticalAlign": "middle",
                }
              }>
              Latest Contribution:
            </span>
            <em
              className="text-dark-primary">
              Dec 12, 2013
            </em>
          </p>
          <div
            className="one-whole soft-double-top text-center">
            <SmallButton
              className="text-alert"
              onClick={[Function]}
              text="Stop Contribution" />
          </div>
          <div>
            <p
              className="soft-double-top soft-half-sides text-left@handheld text-center">
              <small>
                <em>
                  To change details about a schedule, please cancel the current one and create a new schedule with the desired information. We are sorry for any inconvenience this may cause and are working to provide the ability to edit contribution schedules in the future.
                </em>
              </small>
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="soft-half soft-sides@portable soft-double-sides@anchored">
      <TransactionList
        transactions={
          Array [
            Object {
              "date": "2013-12-12",
              "details": Array [
                Object {
                  "account": "test detail account",
                  "amount": 2,
                },
              ],
              "person": Object {},
            },
            Object {
              "date": "2013-12-12",
              "details": Array [
                Object {
                  "account": "test detail account",
                  "amount": 2,
                },
              ],
              "person": Object {},
            },
          ]
        } />
      <hr
        className="push-double-top flush-bottom" />
      <h4
        className="soft soft-double-ends text-center@lap-and-up flush-bottom">
        Recent Articles About Giving
      </h4>
      <div
        className="grid">
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom">
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }>
            <h4
              className="push-half-top@portable push-top@anchored">
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test summary",
                  }
                } />
            </p>
          </Card>
        </div>
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom">
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }>
            <h4
              className="push-half-top@portable push-top@anchored">
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test summary",
                  }
                } />
            </p>
          </Card>
        </div>
      </div>
      ;
    </div>
  </Left>
</div>
`;

exports[`test works with credit card 1`] = `
<div>
  <Connect(SplitContainerWithoutData)
    classes={
      Array [
        "background--light-primary",
      ]
    }
    nav={true}>
    <Meta
      title="Giving Schedule" />
    <Right
      background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/all/heroes/newspring/campuses/Florence.1.2x1_1700_850_90_c1.jpg"
      mobile={false} />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}>
    <div
      className="soft-double-sides@lap-and-up soft-double-ends@lap-and-up soft background--light-primary">
      <div
        className="text-left soft-double-top hard-left@lap-and-up soft-half-bottom soft@anchored">
        <div
          className="soft-double-ends">
          <div
            className="text-center">
            <Currency
              amount="2.00"
              baseHeadingSize="1"
              className="flush-bottom soft-half-bottom text-center display-inline-block" />
            <h4
              className="text-dark-primary flush-bottom">
              Test
            </h4>
            <h4
              className="text-dark-primary soft-half-top">
              1111
               
                
              <AccountType
                height="20px"
                type="Visa"
                width="30px" />
            </h4>
          </div>
        </div>
        <hr
          className="hard push-bottom outlined--light outlined--bottom"
          style={
            Object {
              "borderColor": "#ddd",
            }
          } />
        <div
          className="soft-top">
          <div
            className="floating one-whole display-inline-block">
            <div
              className="floating__item float-left">
              <h4
                className="hard text-dark-primary">
                test account
              </h4>
            </div>
            <div
              className="floating__item float-right">
              <Currency
                amount={2}
                baseHeadingSize="4"
                className="text-right text-dark-secondary" />
            </div>
          </div>
          <p
            className="flush soft-top">
            <span
              className="h7 text-dark-tertiary push-half-right"
              style={
                Object {
                  "verticalAlign": "middle",
                }
              }>
              Start Date:
            </span>
            <em
              className="text-dark-primary">
              Dec 12, 2012
            </em>
          </p>
          <p
            className="flush">
            <span
              className="h7 text-dark-tertiary push-half-right"
              style={
                Object {
                  "verticalAlign": "middle",
                }
              }>
              Latest Contribution:
            </span>
            <em
              className="text-dark-primary">
              Dec 12, 2013
            </em>
          </p>
          <div
            className="one-whole soft-double-top text-center">
            <SmallButton
              className="text-alert"
              onClick={[Function]}
              text="Stop Contribution" />
          </div>
          <div>
            <p
              className="soft-double-top soft-half-sides text-left@handheld text-center">
              <small>
                <em>
                  To change details about a schedule, please cancel the current one and create a new schedule with the desired information. We are sorry for any inconvenience this may cause and are working to provide the ability to edit contribution schedules in the future.
                </em>
              </small>
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="soft-half soft-sides@portable soft-double-sides@anchored">
      <TransactionList
        transactions={
          Array [
            Object {
              "date": "2013-12-12",
              "details": Array [
                Object {
                  "account": "test detail account",
                  "amount": 2,
                },
              ],
              "person": Object {},
            },
            Object {
              "date": "2013-12-12",
              "details": Array [
                Object {
                  "account": "test detail account",
                  "amount": 2,
                },
              ],
              "person": Object {},
            },
          ]
        } />
      <hr
        className="push-double-top flush-bottom" />
      <h4
        className="soft soft-double-ends text-center@lap-and-up flush-bottom">
        Recent Articles About Giving
      </h4>
      <div
        className="grid">
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom">
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }>
            <h4
              className="push-half-top@portable push-top@anchored">
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test summary",
                  }
                } />
            </p>
          </Card>
        </div>
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom">
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }>
            <h4
              className="push-half-top@portable push-top@anchored">
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test summary",
                  }
                } />
            </p>
          </Card>
        </div>
      </div>
      ;
    </div>
  </Left>
</div>
`;
